Hoàn thiện cơ bản 2 giao diện admin user

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,13 +1,1 @@
-{{#if message}}
-<div class="alert alert-danger" role="alert">
-    {{message}}
-</div>
-{{/if}}
-<h1>Danh sách người dùng</h1>
-{{#if users}}
-<ul>
-    {{#each users}}
-    <li>{{this.name}} - {{this.email}}</li>
-    {{/each}}
-</ul>
-{{/if}}
+<p>Hello giao diện chưa đăng kí</p>
