--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,6 +13,13 @@
             </div>
             <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
                 <form action="/login" method="POST">
+                    <div class="mb-3">
+                        <label for="role" class="form-label">Loại người dùng</label>
+                        <select class="form-control" id="role" name="role" required>
+                            <option value="user">User</option>
+                            <option value="admin">Admin</option>
+                        </select>
+                    </div>
                     <!-- Email input -->
                     <div data-mdb-input-init class="form-outline mb-4">
                         <label class="form-label" for="form1Example13">Email address</label>
@@ -37,6 +44,9 @@
                     <button type="submit" data-mdb-button-init data-mdb-ripple-init
                         class="btn btn-primary btn-lg btn-block">Sign in</button>
                 </form>
+                <div class="text-center mt-3">
+                    <p>Chưa có tài khoản? <a href="/register">Đăng ký ngay</a></p>
+                </div>
             </div>
         </div>
     </div>
