--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -8,6 +8,13 @@
                         <div class="card-body p-5">
                             <h2 class="text-uppercase text-center mb-5">Create an account</h2>
                             <form action="/register" method="POST">
+                                <div class="mb-3">
+                                    <label for="role" class="form-label">Loại người dùng</label>
+                                    <select class="form-select" id="role" name="role" required>
+                                        <option value="user">Người dùng</option>
+                                        <option value="admin">Quản trị viên</option>
+                                    </select>
+                                </div>
                                 <div data-mdb-input-init class="form-outline mb-4">
                                     <label class="form-label" for="form3Example1cg">Your Name</label>
                                     <input type="text" id="form3Example1cg" class="form-control form-control-lg"
@@ -24,13 +31,6 @@
                                     <label class="form-label" for="form3Example4cg">Password</label>
                                     <input type="password" id="form3Example4cg" class="form-control form-control-lg"
                                         name="password" />
-
-                                </div>
-
-                                <div data-mdb-input-init class="form-outline mb-4">
-                                    <label class="form-label" for="form3Example4cdg">Repeat your password</label>
-                                    <input type="password" id="form3Example4cdg" class="form-control form-control-lg"
-                                        name="confirmPassword" />
 
                                 </div>
                                 <div class="d-flex justify-content-center">
