--- a/views/adminViews/adminViews.handlebars
+++ b/views/adminViews/adminViews.handlebars
@@ -7,6 +7,9 @@
                     <a class="nav-link " href="admin/accounts">Quản lý tài
                         khoản</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link " href="admin/categories">Quản lý danh mục và sản phẩm</a>
+                </li>
             </ul>
         </div>
 
