--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -1,3 +1,8 @@
+{{#if message}}
+<div class="alert alert-danger" role="alert">
+    {{message}}
+</div>
+{{/if}}
 <section class="vh-100 bg-image"
     style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
     <div class="mask d-flex align-items-center h-100 gradient-custom-3">
