Xong phần upload image admin

--- a/views/adminViews/addProduct.handlebars
+++ b/views/adminViews/addProduct.handlebars
@@ -6,7 +6,7 @@
     <h2 class="text-primary">Thêm Sản phẩm vào danh mục</h2>
 
     <!-- Form thêm sản phẩm -->
-    <form action="/addProduct/{{CatID}}" method="POST" class="row g-3">
+    <form action="/addProduct/{{id}}" method="POST" class="row g-3">
         <div class="col-md-6">
             <label for="productName" class="form-label">Tên sản phẩm:</label>
             <input type="text" id="productName" name="name" class="form-control" placeholder="Nhập tên sản phẩm"
