--- a/views/adminViews/adminViews.handlebars
+++ b/views/adminViews/adminViews.handlebars
@@ -10,6 +10,9 @@
                 <li class="nav-item">
                     <a class="nav-link " href="admin/categories">Quản lý danh mục và sản phẩm</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link " href="admin/statistics">Thống kê doanh thu</a>
+                </li>
             </ul>
         </div>
 
