Chỉnh sửa href quay về trang trước đó

--- a/views/adminViews/statistics.handlebars
+++ b/views/adminViews/statistics.handlebars
@@ -12,6 +12,8 @@
     <h1>Revenue by Category</h1>
 
     <canvas id="myChart" width="400" height="200"></canvas>
+    <a href="/admin" class="btn btn-secondary mt-4">Quay lại</a>
+
 
     <script>
         // Nhúng dữ liệu từ server vào JavaScript
