--- a/views/adminViews/accounts.handlebars
+++ b/views/adminViews/accounts.handlebars
@@ -10,9 +10,6 @@
 </div>
 {{/if}}
 <div class="d-flex align-items-start">
-    <div class="me-3">
-        <a href="/admin" class="btn btn-outline-primary" style="margin-top: 20px;">Home</a>
-    </div>
     <div class="flex-grow-1">
         <h2 class="my-4">Quản lý tài khoản</h2>
         <div class="input-group rounded" style="gap: 10px; margin-top: 20px;">
@@ -77,6 +74,8 @@
             <ul class="pagination justify-content-end" id="pagination">
             </ul>
         </nav>
+        <a href="/admin" class="btn btn-secondary mt-4">Quay lại</a>
+
 
     </div>
 </div>
