--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -44,6 +44,17 @@
                     <button type="submit" data-mdb-button-init data-mdb-ripple-init
                         class="btn btn-primary btn-lg btn-block">Sign in</button>
                 </form>
+
+                <!-- Divider -->
+                <div class="divider d-flex align-items-center my-4">
+                    <p class="text-center fw-bold mx-3 mb-0">Hoặc</p>
+                </div>
+
+                <!-- Google Sign-In Button -->
+                <a href="/google" class="btn btn-danger btn-lg btn-block">
+                    <i class="fab fa-google me-2"></i> Đăng nhập bằng Google
+                </a>
+
                 <div class="text-center mt-3">
                     <p>Chưa có tài khoản? <a href="/register">Đăng ký ngay</a></p>
                 </div>
@@ -51,3 +62,8 @@
         </div>
     </div>
 </section>
+
+<!-- Thêm Font Awesome để sử dụng biểu tượng Google -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-pw1yR6gpE6fF7ZK+6rUv7uK6P+PscLE0dO5kYlLrR7vX+0o7GkY+e5r+K8uB93FqXkfwkF2gI5B1lS4oK/2xUg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
