--- a/views/customerViews/categoriesAndProducts.handlebars
+++ b/views/customerViews/categoriesAndProducts.handlebars
@@ -25,7 +25,7 @@
           <h5 class="card-title">{{product_name}}</h5>
           <p class="card-text">Giá: {{price}} VND</p>
           <p class="text-muted">Danh mục: {{category_name}}</p>
-          <a href="/product/{{product_id}}" class="btn btn-success">Xem chi tiết</a>
+          <button onclick="addToCart({{product_id}}, 1)" class="btn btn-primary">Thêm vào giỏ hàng</button>
         </div>
       </div>
     </div>
