Chỉnh sửa giao diện admin user quesst

--- a/views/adminViews/accounts.handlebars
+++ b/views/adminViews/accounts.handlebars
@@ -83,7 +83,7 @@
         <ul class="pagination justify-content-end" id="pagination"></ul>
     </nav>
 
-    <a href="/admin" class="btn btn-secondary mt-4">Quay lại</a>
+    {{!-- <a href="/admin" class="btn btn-secondary mt-4">Quay lại</a> --}}
 </div>
 
 <style>
