--- a/views/adminViews/categories.handlebars
+++ b/views/adminViews/categories.handlebars
@@ -112,7 +112,7 @@
         {{else}}
         <p class="text-muted">Không có Category nào.</p>
         {{/if}}
-        <a href="/admin" class="btn btn-secondary mt-4">Quay lại</a>
+        {{!-- <a href="/admin" class="btn btn-secondary mt-4">Quay lại</a> --}}
 
     </section>
 </main>
