--- a/views/adminViews/detailProduct.handlebars
+++ b/views/adminViews/detailProduct.handlebars
@@ -17,5 +17,5 @@
             <p><strong>Năm phát hành:</strong> {{product.release_year}}</p>
         </div>
     </div>
-    <a href="/admin/categories" class="btn btn-secondary mt-4">Quay lại</a>
+    {{!-- <a href="/admin/categories" class="btn btn-secondary mt-4">Quay lại</a> --}}
 </main>
