--- a/views/adminViews/detailUser.handlebars
+++ b/views/adminViews/detailUser.handlebars
@@ -27,10 +27,10 @@
             </div>
             {{/if}}
         </div>
-        <div class="card-footer text-center">
+        {{!-- <div class="card-footer text-center">
             <a href="/admin/accounts" class="btn btn-secondary">
                 <i class="bi bi-arrow-left"></i> Back to Accounts
             </a>
-        </div>
+        </div> --}}
     </div>
 </div>
