--- a/views/adminViews/editUser.handlebars
+++ b/views/adminViews/editUser.handlebars
@@ -26,6 +26,6 @@
         </div>
 
         <button type="submit" class="btn btn-primary">Update</button>
-        <a href="/admin/accounts" class="btn btn-secondary">Cancel</a>
+        {{!-- <a href="/admin/accounts" class="btn btn-secondary">Cancel</a> --}}
     </form>
 </div>
