--- a/views/adminViews/statistics.handlebars
+++ b/views/adminViews/statistics.handlebars
@@ -96,7 +96,7 @@
             <div id="barChartLegend" class="custom-legend"></div>
         </div>
     </div>
-    <a href="/admin" class="btn btn-secondary mt-4">Quay lại</a>
+    {{!-- <a href="/admin" class="btn btn-secondary mt-4">Quay lại</a> --}}
 
 
     <script>
