--- a/views/adminViews/editProduct.handlebars
+++ b/views/adminViews/editProduct.handlebars
@@ -7,6 +7,7 @@
 
     <!-- Form chỉnh sửa sản phẩm -->
     <form action="/admin/categories/editProduct/{{product.product_id}}" method="POST" class="row g-3">
+        <!-- Thông tin sản phẩm -->
         <div class="col-md-6">
             <label for="productName" class="form-label">Tên sản phẩm:</label>
             <input type="text" id="productName" name="product_name" class="form-control" value="{{product.product_name}}" required>
@@ -35,10 +36,28 @@
             <label for="releaseYear" class="form-label">Năm phát hành:</label>
             <input type="number" id="releaseYear" name="release_year" class="form-control" value="{{product.release_year}}">
         </div>
-        <div class="col-md-6">
-            <label for="productImage" class="form-label">URL Hình ảnh:</label>
-            <input type="text" id="productImage" name="image" class="form-control" value="{{product.image}}">
+
+        <!-- Cập nhật màu sắc -->
+        <div class="col-md-12">
+            <h4 class="mt-4">Cập nhật Màu Sắc</h4>
+            <div id="colorContainer">
+                {{#each product.colors}}
+                <div class="row g-3 mb-3">
+                    <div class="col-md-6">
+                        <label class="form-label">Tên màu:</label>
+                        <input type="text" name="colors[{{@index}}][name]" class="form-control" value="{{this.color_name}}" readonly>
+                    </div>
+                    <div class="col-md-6">
+                        <label class="form-label">Số lượng:</label>
+                        <input type="number" name="colors[{{@index}}][stock]" class="form-control" value="{{this.stock}}" required>
+                    </div>
+                </div>
+                {{/each}}
+            </div>
         </div>
+
+
+        <!-- Nút cập nhật -->
         <div class="col-md-12">
             <button type="submit" class="btn btn-warning w-100">Cập nhật sản phẩm</button>
         </div>
