--- a/views/customerViews/categoriesAndProducts.handlebars
+++ b/views/customerViews/categoriesAndProducts.handlebars
@@ -1,3 +1,8 @@
+{{#if message}}
+<div class="alert alert-danger" role="alert">
+  {{message}}
+</div>
+{{/if}}
 <div class="container my-5">
 
   <!-- Thanh tìm kiếm -->
