Sửa được cái giỏ hàng cho quest và user

--- a/views/customerViews/cart.handlebars
+++ b/views/customerViews/cart.handlebars
@@ -19,7 +19,7 @@
                     <td>{{product_name}}</td>
                     <td>{{quantity}}</td>
                     <td>{{formatCurrency price}}</td>
-                    <td>{{formatCurrency total}}</td>
+                    <td>{{formatCurrency sum_price}}</td>
                     <td>
                         <button class="btn btn-danger btn-sm" data-id="{{id}}">Xóa</button>
                     </td>
