--- a/views/customerViews/productDetail.handlebars
+++ b/views/customerViews/productDetail.handlebars
@@ -10,7 +10,7 @@
       <p><strong>Hệ điều hành:</strong> {{product.operating_system}}</p>
       <p><strong>Màn hình:</strong> {{product.screen_size}}</p>
       <p><strong>Năm phát hành:</strong> {{product.release_year}}</p>
-      <a href="/categories/{{product.category_id}}/products" class="btn btn-primary">Quay lại sản phẩm</a>
+      <a href="/user/{{product.category_id}}/products" class="btn btn-primary">Quay lại sản phẩm</a>
     </div>
   </div>
 </div>
