--- a/views/customerViews/productsByCategory.handlebars
+++ b/views/customerViews/productsByCategory.handlebars
@@ -24,6 +24,6 @@
     {{/each}}
   </div>
   <div class="text-center mt-4">
-    <a href="/categories" class="btn btn-secondary">Quay lại danh mục</a>
+    <a href="/user" class="btn btn-secondary">Quay lại danh mục</a>
   </div>
 </div>
