--- a/views/customerViews/categoriesAndProducts.handlebars
+++ b/views/customerViews/categoriesAndProducts.handlebars
@@ -29,7 +29,7 @@
       <div class="card text-center">
         <div class="card-body">
           <h5 class="card-title">{{name}}</h5>
-          <a href="/categories/{{id}}/products" class="btn btn-primary">Xem sản phẩm</a>
+          <a href="/user/{{id}}/products" class="btn btn-primary">Xem sản phẩm</a>
         </div>
       </div>
     </div>
